--- a/glide.yaml
+++ b/glide.yaml
@@ -14,9 +14,9 @@ import:
   - package: github.com/cesanta/validate-json
   - package: github.com/stretchr/testify
   - package: github.com/emccode/libstorage
-    ref:     853a292a69ec94efd6b31f32752a077c7807bc82
+    ref:     2a4d9533c7e4183c9ea98c7bfc7ee753a7235798
     vcs:     git
-    repo:    https://github.com/emccode/libstorage
+    repo:    /Users/clintonkitson/go/src/github.com/emccode/libstorage
   - package: github.com/docker/libkv
     vcs:     git
   - package: github.com/boltdb/bolt
