--- a/glide.yaml
+++ b/glide.yaml
@@ -7,7 +7,6 @@ import:
   - package: github.com/akutz/gofig
   - package: github.com/akutz/gotil
   - package: github.com/akutz/goof
-  - package: github.com/akutz/golf
   - package: github.com/blang/semver
     ref:     v3.0.1
     vcs:     git
@@ -16,10 +15,25 @@ import:
   - package: github.com/emccode/libstorage
     ref:     2a4d9533c7e4183c9ea98c7bfc7ee753a7235798
     vcs:     git
-    repo:    https://github.com/clintonskitson/libstorage
+    repo:    /Users/clintonkitson/go/src/github.com/emccode/libstorage
   - package: github.com/docker/libkv
     vcs:     git
   - package: github.com/boltdb/bolt
   - package: github.com/coreos/etcd/client
   - package: github.com/samuel/go-zookeeper/zk
   - package: github.com/stretchr/testify
+  - package: github.com/spf13/pflag
+    ref:     b084184666e02084b8ccb9b704bf0d79c466eb1d
+    repo:    https://github.com/spf13/pflag
+    vcs:     git
+  - package: github.com/spf13/cobra
+    ref:     363816bb13ce1710460c2345017fd35593cbf5ed
+    repo:    https://github.com/akutz/cobra
+    vcs:     git
+  - package: github.com/spf13/viper
+    ref:     support/rexray
+    repo:    https://github.com/akutz/viper.git
+    vcs:     git
+  - package: github.com/akutz/golf
+    ref:     v0.1.1
+    vcs:     git
