--- a/glide.yaml
+++ b/glide.yaml
@@ -5,6 +5,8 @@ import:
     repo:    https://github.com/akutz/logrus
     vcs:     git
   - package: github.com/akutz/gofig
+    ref:     v0.1.2
+    vcs:     git
   - package: github.com/akutz/gotil
   - package: github.com/akutz/goof
   - package: github.com/blang/semver
@@ -12,16 +14,25 @@ import:
     vcs:     git
   - package: github.com/cesanta/validate-json
   - package: github.com/stretchr/testify
+    ref:     v1.1.3
+    vcs:     git
   - package: github.com/emccode/libstorage
     ref:     2a4d9533c7e4183c9ea98c7bfc7ee753a7235798
     vcs:     git
     repo:    https://github.com/clintonskitson/libstorage
   - package: github.com/docker/libkv
+    ref:     v0.1.0
     vcs:     git
   - package: github.com/boltdb/bolt
+    ref:     v1.2.0
+    vcs:     git
   - package: github.com/coreos/etcd/client
+    ref:     v2.3.2
+    vcs:     git
   - package: github.com/samuel/go-zookeeper/zk
   - package: github.com/stretchr/testify
+    ref:     v1.1.3
+    vcs:     git
   - package: github.com/spf13/pflag
     ref:     b084184666e02084b8ccb9b704bf0d79c466eb1d
     repo:    https://github.com/spf13/pflag
