Updated gofig to use specific commit on master

--- a/glide.yaml
+++ b/glide.yaml
@@ -5,7 +5,7 @@ import:
     repo:    https://github.com/akutz/logrus
     vcs:     git
   - package: github.com/akutz/gofig
-    ref:     v0.1.2
+    ref:     e403cdba84cf4fbf931bf7bf5d86066dbab5b850
     vcs:     git
   - package: github.com/akutz/gotil
   - package: github.com/akutz/goof
