--- a/glide.yaml
+++ b/glide.yaml
@@ -33,6 +33,9 @@ import:
   - package: github.com/stretchr/testify
     ref:     v1.1.3
     vcs:     git
+  - package: github.com/hashicorp/consul
+    ref:     v0.6.4
+    vcs:     git
   - package: github.com/spf13/pflag
     ref:     b084184666e02084b8ccb9b704bf0d79c466eb1d
     repo:    https://github.com/spf13/pflag
