--- a/glide.yaml
+++ b/glide.yaml
@@ -36,6 +36,9 @@ import:
   - package: github.com/hashicorp/consul
     ref:     v0.6.4
     vcs:     git
+  - package: github.com/hashicorp/go-cleanhttp
+    ref:     453849296f26156ae19839e0a2767e1a04e7ed73
+    vcs:     git
   - package: github.com/spf13/pflag
     ref:     b084184666e02084b8ccb9b704bf0d79c466eb1d
     repo:    https://github.com/spf13/pflag
