Let's try the coveralls again

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ addons:
     packages:
     - rpm
 
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
+
 before_script:
   - source .build/dependencies.sh
 
