compose initial readthedocs content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,9 +11,7 @@ pages:
 - User Guide:
     - Installation: user-guide/installation.md
     - Configuration: user-guide/configuration.md
-    - Storage providers: user-guide/storage-providers.md
-    - Container schedulers: user-guide/container-schedulers.md
-    - Cloud platforms: user-guide/cloud-platforms.md
+    - Troubleshooting: user-guide/troubleshooting.md
 - Developer guide:
     - Project guidelines: developer-guide/project-guidelines.md
     - Build reference: developer-guide/build-reference.md
