--- a/glide.yaml
+++ b/glide.yaml
@@ -8,22 +8,33 @@ import:
     ref:     96b760df1cdbc843d5f633b7705f95c9090cb21e 
     vcs:     git
   - package: github.com/akutz/gotil
+    ref:     6fa2e80bd3ac40f15788cfc3d12ebba49a0add92
+    vcs:     git
   - package: github.com/akutz/goof
+    ref:     ea06624ca980bae80c1b615b8417723436d235ab
+    vcs:     git
   - package: github.com/blang/semver
     ref:     v3.0.1
     vcs:     git
   - package: github.com/cesanta/validate-json
+    ref:     2f16017c76fc2403d143e93cea1e1b9526a01148
+    vcs:     git
   - package: github.com/stretchr/testify
   - package: github.com/emccode/libstorage
-    ref:     9a626ccb753488ccd0e8668e7cb092965ed40f3b 
+    ref:     670d123dbd7159c7d44b55639a8d2ce4ab73d6fd 
     vcs:     git
     repo:    https://github.com/emccode/libstorage
   - package: github.com/docker/libkv
     vcs:     git
   - package: github.com/boltdb/bolt
+    vcs:     git
+    ref:     d97499360d1ecebc492ea66c7447ea948f417620
   - package: github.com/coreos/etcd/client
+    vcs:     git
+    ref:     v2.3.3
   - package: github.com/samuel/go-zookeeper/zk
-  - package: github.com/stretchr/testify
+    vcs:     git
+    ref:     5250732bd2ed71d1e374212ebfc32760eca10c0a
   - package: github.com/spf13/pflag
     ref:     b084184666e02084b8ccb9b704bf0d79c466eb1d
     repo:    https://github.com/spf13/pflag
